# Knowledge-Graph-Guided-LLM-Validation-Logic-Based-Reasoning-System

./: .dockerignore  .env.example  README.md  accuracy.ipynb  pyproject.toml  requirements.txt  results.csv
configs/: dev.yaml
kdsh_trackA_data_centric/data/gold/run_id=run_20260112_111511/: constraint_runs.jsonl  constraints_grounded.jsonl  decision_scores.csv  decision_scores_original.csv  report_run_20260112_111511.md  results.csv  results_original.csv  results_train.csv
kdsh_trackA_data_centric/data/gold/run_id=run_20260201_223201/: constraint_runs.jsonl  constraints_grounded.jsonl  decision_scores.csv  report_run_20260201_223201.md  results_train.csv
kdsh_trackA_data_centric/data/gold/run_id=run_20260225_221138/: constraint_runs.jsonl  constraints_grounded.jsonl  decision_scores.csv  report_run_20260225_221138.md  results_train.csv
kdsh_trackA_data_centric/data/run_manifests/: run_20260112_111511.json  run_20260201_223201.json
kdsh_trackA_data_centric/data/silver/run_id=run_20260112_111511/: aliases.csv  claims.jsonl  evidence_labels.csv  facts.jsonl  kg_triples.csv  novel_registry.csv  retrieval_candidates.csv  retrieval_coverage.csv
kdsh_trackA_data_centric/data/silver/run_id=run_20260201_220716/: claims.jsonl  novel_registry.csv  retrieval_coverage.csv  (+1 more)
src/docker/: Dockerfile  docker-compose.yml
src/kdsh/: main.py
src/kdsh/app/: main.py
src/kdsh/common/: config.py  utils.py
src/kdsh/pipeline/: orchestrator.py
src/kdsh_trackA_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scripts/: eval_train.py
tests/: test_smoke.py
(+385 files in other folders)
